# gst-plugins-vision

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h  set_paths_and_run_cmake.bat
cmake/modules/: FindATK.cmake  FindAptina.cmake  FindBitflow.cmake  FindCairo.cmake  FindEDT.cmake  FindEuresys.cmake  FindFreeImage.cmake  FindGLIB2.cmake  FindGObject.cmake  FindGStreamer.cmake  FindGStreamerPluginsBase.cmake  FindGTK2.cmake  FindGigESim.cmake  FindGlew.cmake  FindGlib2.cmake  FindGstreamer.cmake  FindIDSuEye.cmake  FindIOtechDaqX.cmake  FindImperx.cmake  FindImperxSDI.cmake  FindKAYA.cmake  FindLibIconv.cmake  FindLibXml2.cmake  FindLibpng.cmake  FindMatrox.cmake  FindNIIMAQ.cmake  FindNIIMAQdx.cmake  FindOpenCV.cmake  FindOpenGL.cmake.off  FindOrc.cmake  FindPhoenix.cmake  FindPleora.cmake  FindPylon.cmake  FindQCam.cmake  FindSapera.cmake  FindXCLIB.cmake  FindXiris.cmake  FindZlib.cmake  GetGitRevisionDescription.cmake  MacroFindGStreamerLibrary.cmake
common/: genicampixelformat.h  get_unix_ns.h
ext/: CMakeLists.txt
ext/freeimage/: CMakeLists.txt  gstfreeimage.c  gstfreeimage.h  gstfreeimagedec.c  gstfreeimagedec.h  gstfreeimageenc.c  gstfreeimageenc.h  gstfreeimageutils.c  gstfreeimageutils.h
ext/gigesim/: CMakeLists.txt  gstgigesim.cpp  gstgigesim.h
gst/: CMakeLists.txt  gstvideolevels.c  gstvideolevels.h  main.c
gst-libs/: CMakeLists.txt
gst-libs/klv/: CMakeLists.txt  klv.h
gst/bayerutils/: CMakeLists.txt  gstbayer2gray.c  gstbayer2gray.h
gst/extractcolor/: CMakeLists.txt  gstextractcolor.c  gstextractcolor.h  gstextractcolororc-dist.c  gstextractcolororc-dist.h  gstextractcolororc.orc
gst/klv/: CMakeLists.txt  gstklv.c  gstklvinject.c  gstklvinject.h  gstklvinspect.c  gstklvinspect.h  gstklvtimestamp.c  gstklvtimestamp.h
gst/misb/: CMakeLists.txt  gstmisb.c  gstmisbirpack.c  gstmisbirpack.h  gstmisbirunpack.c  gstmisbirunpack.h
gst/select/: CMakeLists.txt  gstselect.c  gstselect.h
gst/sensorfx/: CMakeLists.txt  gstsensorfx.c  gstsensorfx3dnoise.c  gstsensorfx3dnoise.h  gstsensorfxblur.c  gstsensorfxblur.h
gst/videoadjust/: CMakeLists.txt  gstvideoadjust.c  gstvideolevels.c  gstvideolevels.c~  gstvideolevels.h
sys/: CMakeLists.txt  gstniimaq.c  gstniimaq.h
sys/aptina/: CMakeLists.txt  gstaptinasrc.c  gstaptinasrc.h
sys/bitflow/: CMakeLists.txt  gstbitflowsrc.c  gstbitflowsrc.h
sys/edt/: CMakeLists.txt  gstedt.c  gstedtpdvsink.c  gstedtpdvsink.h  gstedtpdvsrc.c  gstedtpdvsrc.h
sys/euresys/: CMakeLists.txt  gsteuresys.c  gsteuresys.h  gsteuresyssrc.c  gsteuresyssrc.h
sys/genicam/: CMakeLists.txt  GenTL_v1_5.h  gstgenicamsrc.c  gstgenicamsrc.h
sys/gentl/: CMakeLists.txt  gstgentlsrc.c  gstgentlsrc.h
sys/idsueye/: CMakeLists.txt  gstidsueyesrc.c  gstidsueyesrc.h
sys/imperx/: CMakeLists.txt  gstframelinksrc.c  gstframelinksrc.h
sys/imperxflex/: CMakeLists.txt  gstframelinksrc.c  gstframelinksrc.h
sys/imperxsdi/: CMakeLists.txt  gstimperxsdisrc.cpp  gstimperxsdisrc.h
sys/iotechdaqx/: CMakeLists.txt  gstiotechdaqx.c  gstiotechdaqx.h
sys/kaya/: CMakeLists.txt  gstkayaplugin.c  gstkayasink.c  gstkayasink.h  gstkayasrc.c  gstkayasrc.h
sys/matrox/: CMakeLists.txt  gstmatroxsrc.c  gstmatroxsrc.h
sys/niimaq/: CMakeLists.txt  gstniimaq.c  gstniimaq.h
sys/niimaqdx/: CMakeLists.txt  gstniimaqdx.c  gstniimaqdx.h
sys/niimaqdx/win64/: niimaqdx.def  niimaqdx.lib
sys/phoenix/: CMakeLists.txt  gstphoenixsrc.c  gstphoenixsrc.h
sys/pixci/: CMakeLists.txt  gstpixcisrc.c  gstpixcisrc.h
sys/pleora/: CMakeLists.txt  gstpleora.cpp  gstpleorasink.cpp  gstpleorasink.h  gstpleorasrc.cpp  gstpleorasrc.h  klv.c  klv.h  streamingchannelsource.cpp  streamingchannelsource.h
sys/pylon/: CMakeLists.txt  gstpylonsrc.c  gstpylonsrc.h
sys/qcam/: CMakeLists.txt  gstqcamsrc.c  gstqcamsrc.h
sys/sapera/: CMakeLists.txt  aq2_prm_user.h  corhw_prm_user.h  gstsaperasrc.cpp  gstsaperasrc.h
sys/xiris/: CMakeLists.txt  gstxiris.hpp  gstxirissrc.cpp  gstxirissrc.h
vs2010/: gst-plugins-vision.sln
vs2010/edt/: edt.vcxproj  edt.vcxproj.filters
vs2010/euresys/: euresys.props  euresys.vcxproj  euresys.vcxproj.filters
vs2010/framelink/: framelink.props  framelink.vcxproj  framelink.vcxproj.filters
vs2010/niimaq/: niimaq.props  niimaq.vcxproj  niimaq.vcxproj.filters
vs2010/niimaqdx/: niimaqdx.props  niimaqdx.vcxproj  niimaqdx.vcxproj.filters
vs2010/phoenix/: phoenix.props  phoenix.vcxproj  phoenix.vcxproj.filters
vs2010/pixci/: pixci.props  pixci.vcxproj  pixci.vcxproj.filters
vs2010/videoadjust/: videoadjust.vcxproj  videoadjust.vcxproj.filters
